<resources>

    <string name="app_name">Wave Map</string>

    <string name="wifi">Wi-Fi</string>
    <string name="lte">LTE</string>
    <string name="noise">Noise</string>
    <string name="bluetooth">Bluetooth</string>

    <string name="filter_measures">Filter measures</string>
    <string name="remove_filter">Remove filter</string>

    <string name="error_occurred">An error occurred</string>

    <string name="new_measure">New measurement</string>
    <string name="change_sampler">Change sampler</string>

    <string name="stop">Stop</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="sampler_settings">Sampler options</string>
    <string name="scan_settings">Scan options</string>
    <string name="notification_settings">Notifications</string>
    <string name="map_settings">Map options</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="lte_settings">LTE settings</string>
    <string name="noise_settings">Noise settings</string>
    <string name="bluetooth_settings">Bluetooth settings</string>

    <string name="range_bad">Measure worst value</string>
    <string name="range_good">Measure best value</string>
    <string name="past_limit">Past measures to consider</string>
    <string name="range_size">Number of ranges</string>
    <string name="range_size_desc">Number of possible colors that can appear on the map</string>

    <string name="periodic_measure">Periodic scans</string>
    <string name="periodic_measure_desc">Periodically scan when the application is active</string>
    <string name="periodic_measure_interval">Scan time interval (in seconds)</string>
    <string name="measure_on_tile_change">Scan while moving</string>
    <string name="measure_on_tile_change_desc">Automatically scan when moving between tiles</string>
    <string name="background_measure">Background scans</string>
    <string name="background_measure_desc">Periodically scan when the application is closed</string>
    <string name="notify_uncovered_area">Uncovered area notification</string>
    <string name="notify_uncovered_area_desc">Send a notification when entering an area without recent measurements</string>
    <string name="tile_label">Tile value</string>
    <string name="tile_label_desc">Show the value of tiles</string>

    <string name="use_shared">Use shared measurements</string>

    <!-- Notifications -->
    <string name="notification_uncovered_area">Uncovered area</string>
    <string name="notification_uncovered_area_desc">Notify if the area is uncovered from measurements</string>
    <string name="notification_uncovered_area_text">This area doesn\'t have recent measurements</string>

    <string name="notification_background">Background scan</string>
    <string name="notification_background_desc">Notify if the application is scanning in background</string>
    <string name="notification_background_text">The application is scanning in background</string>

    <string name="export_download">Export download</string>
    <string name="export_download_desc">Notify when the measurements file has been saved</string>
    <string name="export_download_text">File saved successfully</string>


    <!-- Dialog -->
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <string name="missing_minimum_permissions">Missing permissions</string>
    <string name="missing_minimum_permissions_desc">Permission to access location is required to use the app</string>

    <string name="missing_wifi_permission">Missing location permission</string>
    <string name="missing_wifi_permission_desc">Location permission is required to start a Wi-Fi measurement</string>

    <string name="missing_lte_permission">Missing location permission</string>
    <string name="missing_lte_permission_desc">Location permission is required to start a LTE measurement</string>

    <string name="missing_noise_permission">Missing microphone permission</string>
    <string name="missing_noise_permission_desc">Microphone permission is required to start a noise measurement</string>

    <string name="missing_bluetooth_permission">Missing Bluetooth permission</string>
    <string name="missing_bluetooth_permission_desc">Bluetooth permission is required to start a measurement</string>

    <string name="missing_background_gps_permission">Missing background location permission</string>
    <string name="missing_background_gps_permission_desc">Background location is required to retrieve the position of the device while the app is inactive</string>

    <string name="missing_notification_permission">Missing notification permission</string>
    <string name="missing_notification_permission_desc">The app in unable to send notifications</string>

    <string name="battery_optimization_permission">Allow background activity</string>
    <string name="battery_optimization_permission_desc">It is advisable to allow the application to maintain background activities</string>

    <string name="wifi_not_enabled">Wi-Fi is not enabled</string>
    <string name="bluetooth_not_enabled">Bluetooth is not enabled</string>

    <string name="missing_disk_permission">Missing disk permission</string>
    <string name="missing_disk_permission_desc">Unable to create a file</string>

    <!--  Sharing  -->
    <string name="export">Export</string>
    <string name="import_measures">Import</string>
    <string name="share_measurement">Share measurements</string>
    <string name="share">Share</string>
    <string name="save">Save</string>

    <string name="file_share_export">Export to file</string>
    <string name="file_share_export_desc">Export your measurements into a file that you can share with other users</string>
    <string name="file_share_import">Import from file</string>

    <string name="export_date">Export date: %1$s</string>
    <string name="import_size">Measurements: %1$d</string>

    <string name="cancel_import">Stop import</string>
    <string name="cancel_export">Stop export</string>

    <string name="export_completed">Export completed</string>

    <string name="wave_map_export">Wave Map Export</string>

    <string name="invalid_format">Invalid format</string>

    <string name="saved_in_downloads">Successfully saved in Downloads</string>

</resources>