<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/export_completed"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@android:drawable/ic_menu_share"
        android:text="@string/share" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@android:drawable/stat_sys_download"
        android:text="@string/save" />

</LinearLayout>