<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.share.fragments.ShareMainFragment"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="35dp"
    android:paddingRight="35dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/file_share_export"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="3dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/file_share_export_desc" />

    <Button
        android:id="@+id/start_file_export_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/export" />

</LinearLayout>