<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sampler" />

    <Spinner
        android:id="@+id/spinner_sampler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/change_sampler"
        android:minHeight="32dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/new_measure"
        android:focusable="true"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="?attr/colorOnPrimary"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="?attr/colorPrimary"
        app:tint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_search_category_default"
        android:focusable="true"
        android:contentDescription="@string/filter_measures"/>


</androidx.constraintlayout.widget.ConstraintLayout>